# tenrso

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md
crates/tenrso/: Cargo.toml  README.md
crates/tenrso-ad/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
crates/tenrso-ad/benches/: gradient_benchmarks.rs  graph_benchmarks.rs
crates/tenrso-ad/examples/: basic_einsum_ad.rs  cp_decomposition_gradients.rs  custom_ad_operations.rs  gradient_checkpointing.rs  gradient_compression.rs  gradient_monitoring.rs  graph_based_ad.rs  hessian_optimization.rs  mixed_precision_training.rs  optimizers_showcase.rs  sparse_gradients.rs
crates/tenrso-ad/src/: checkpoint.rs  compression.rs  grad.rs  gradcheck.rs  graph.rs  graph_optimizer.rs  hessian.rs  hooks.rs  lib.rs  mixed_precision.rs  monitoring.rs  optimizers.rs  parallel.rs  sparse_grad.rs  storage.rs  utils.rs  vjp.rs
crates/tenrso-ad/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/tenrso-core/: Cargo.toml  README.md  TODO.md
crates/tenrso-core/benches/: convolution_benchmarks.rs  reshape_permute.rs  tensor_creation.rs  unfold_fold.rs
crates/tenrso-core/examples/: basic_tensor.rs  unfold_fold.rs  views.rs
crates/tenrso-core/proptest-regressions/: property_tests.txt
crates/tenrso-core/src/: dense.rs  lib.rs  ops.rs  property_tests.rs  types.rs
crates/tenrso-core/src/dense/: algebra.rs  algebra.rs.bak3  algebra.rs.bak4  algebra.rs.final  combining.rs  comparison.rs  convolution.rs  creation.rs  densend_traits.rs  elementwise.rs  fft.rs  functions.rs  indexing.rs  linalg_advanced.rs  manipulation.rs  mod.rs  shape_ops.rs  statistics.rs  types.rs
crates/tenrso-core/tests/: integration_tests.rs
crates/tenrso-decomp/: Cargo.toml  README.md  TODO.md
crates/tenrso-decomp/benches/: decompositions.rs
crates/tenrso-decomp/examples/: cp_als.rs  cp_completion.rs  incremental_cp.rs  randomized_methods.rs  rank_selection.rs  reconstruction.rs  tt.rs  tucker.rs
crates/tenrso-decomp/proptest-regressions/: property_tests.txt
crates/tenrso-decomp/src/: cp.rs  lib.rs  property_tests.rs  rank_selection.rs  tt.rs  tucker.rs  utils.rs
crates/tenrso-decomp/src/cp/: advanced.rs  core.rs  helpers.rs  mod.rs  tests.rs  (+1 more)
crates/tenrso-decomp/tests/: decomposition_integration.rs
crates/tenrso-exec/: Cargo.toml  README.md  TODO.md
crates/tenrso-exec/benches/: executor_ops.rs  memory_pool_benchmarks.rs  optimization_benchmarks.rs  pooled_ops_benchmarks.rs
crates/tenrso-exec/examples/: advanced_operations.rs  basic_operations.rs  thread_local_pooling.rs
crates/tenrso-exec/src/: executor.rs  hints.rs  lib.rs  ops.rs
crates/tenrso-kernels/: Cargo.toml  PERFORMANCE.md  README.md  TODO.md
crates/tenrso-kernels/benches/: kernel_benchmarks.rs
crates/tenrso-kernels/examples/: cp_als_workflow.rs  khatri_rao.rs  mttkrp_cp.rs  nmode_tucker.rs  statistical_analysis.rs  tt_workflow.rs
crates/tenrso-kernels/proptest-regressions/: property_tests.txt
crates/tenrso-kernels/src/: contractions.rs  error.rs  hadamard.rs  khatri_rao.rs  kronecker.rs  lib.rs  mttkrp.rs  nmode.rs  outer.rs  property_tests.rs  randomized.rs  reductions.rs  tt_ops.rs  utils.rs
crates/tenrso-kernels/tests/: integration_tests.rs
crates/tenrso-ooc/: Cargo.toml  README.md  TODO.md
crates/tenrso-ooc/benches/: advanced_features.rs  allocator_comparison.rs  distributed_benchmarks.rs  integrity_and_autoselect.rs  large_tensors.rs  lockfree_prefetch_benchmarks.rs  ml_eviction_benchmarks.rs
crates/tenrso-ooc/examples/: advanced_memory_management.rs  allocator_selection.rs  basic_streaming.rs  chunk_graph_execution.rs  compression_auto_demo.rs  compression_benchmark.rs  cp_als_ooc.rs  data_integrity_demo.rs  distributed_demo.rs  gpu_demo.rs  lockfree_prefetch_demo.rs  memory_management.rs  ml_eviction_demo.rs  mttkrp_streaming.rs  numa_demo.rs  parquet_storage.rs  prefetch_demo.rs  profiling_demo.rs  tensor_network_ooc.rs  tucker_ooc.rs
crates/tenrso-ooc/src/: allocators.rs  arrow_io.rs  batch_io.rs  chunk_graph.rs  chunking.rs  compression.rs  compression_auto.rs  contraction.rs  dashboard.rs  data_integrity.rs  gpu.rs  lib.rs  lockfree_prefetch.rs  memory.rs  memory_tiers.rs  ml_eviction.rs  mmap_io.rs  numa.rs  opentelemetry_support.rs  parquet_io.rs  prefetch.rs  profiling.rs  prometheus_metrics.rs  simd_ops.rs  streaming.rs  tracing_support.rs  working_set.rs  zerocopy_io.rs
crates/tenrso-ooc/tests/: chunk_graph_integration.rs  compression_integration.rs  distributed_integration.rs  end_to_end.rs  property_tests.proptest-regressions  property_tests.rs
crates/tenrso-planner/: CHANGELOG.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md  TODO.md
crates/tenrso-planner/benches/: comprehensive_comparison.rs  parallel_planners.rs  planner_benchmarks.rs
crates/tenrso-planner/examples/: advanced_features.rs  basic_matmul.rs  comprehensive_comparison.rs  genetic_algorithm.rs  matrix_chain.rs  ml_calibration.rs  parallel_ensemble.rs  plan_visualization.rs  planning_hints.rs
crates/tenrso-planner/src/: api.rs  cache.rs  cost.rs  lib.rs  ml_cost.rs  order.rs  parallel.rs  parser.rs  profiling.rs  property_tests.rs  quality.rs  repr.rs  simulator.rs  tiling.rs
crates/tenrso-sparse/: Cargo.toml  FORMAT_GUIDE.md  FORMAT_SELECTION_GUIDE.md  PERFORMANCE.md  README.md  TODO.md
crates/tenrso-sparse/benches/: sparse_ops.rs
crates/tenrso-sparse/examples/: advanced_ops.rs  basic_sparse_ops.rs  complete_workflow.rs  format_comparison.rs  iterative_solvers.rs  matrix_reordering.rs
crates/tenrso-sparse/src/: bcsr.rs  constructors.rs  coo.rs  csc.rs  csf.rs  csr.rs  dia.rs  eigensolvers.rs  ell.rs  error.rs  factorization.rs  graph.rs  hicoo.rs  indexing.rs  io.rs  iterators.rs  lib.rs  mask.rs  masked_einsum.rs  norms.rs  ops.rs  parallel.rs  patterns.rs  reductions.rs  reordering.rs  solvers.rs  structural.rs  utils.rs  viz.rs
crates/tenrso-sparse/tests/: property_tests.proptest-regressions  property_tests.rs
crates/tenrso/src/: lib.rs
(+38 files in other folders)
