[workspace]
members = [
  "crates/tenrso",
  "crates/tenrso-core",
  "crates/tenrso-kernels",
  "crates/tenrso-decomp",
  "crates/tenrso-sparse",
  "crates/tenrso-planner",
  "crates/tenrso-ooc",
  "crates/tenrso-exec",
  "crates/tenrso-ad",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/tenrso"
homepage   = "https://github.com/cool-japan/tenrso"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
indexmap = "2.12.0"
smallvec = "1.15.1"
arrow = { version = "57.0.0", default-features = false, features = ["ipc"] }
parquet = "57.0.0"
memmap2 = "0.9.9"
criterion = { version = "0.7.0", features = ["html_reports"] }

# SciRS2 ecosystem (MANDATORY - see SCIRS2_INTEGRATION_POLICY.md)
scirs2-core = { version = "0.1.0-rc.2", features = ["array", "random", "parallel"] }
scirs2-linalg = { version = "0.1.0-rc.2" }

# TenRSo internal crates
tenrso = { version = "0.1.0-alpha.1", path = "crates/tenrso" }
tenrso-core = { version = "0.1.0-alpha.1", path = "crates/tenrso-core" }
tenrso-kernels = { version = "0.1.0-alpha.1", path = "crates/tenrso-kernels" }
tenrso-decomp = { version = "0.1.0-alpha.1", path = "crates/tenrso-decomp" }
tenrso-sparse = { version = "0.1.0-alpha.1", path = "crates/tenrso-sparse" }
tenrso-planner = { version = "0.1.0-alpha.1", path = "crates/tenrso-planner" }
tenrso-ooc = { version = "0.1.0-alpha.1", path = "crates/tenrso-ooc" }
tenrso-exec = { version = "0.1.0-alpha.1", path = "crates/tenrso-exec" }
tenrso-ad = { version = "0.1.0-alpha.1", path = "crates/tenrso-ad" }
