[workspace]
members = [
  "crates/tenrso",
  "crates/tenrso-core",
  "crates/tenrso-kernels",
  "crates/tenrso-decomp",
  "crates/tenrso-sparse",
  "crates/tenrso-planner",
  "crates/tenrso-ooc",
  "crates/tenrso-exec",
  "crates/tenrso-ad",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cool-japan/tenrso"
homepage   = "https://github.com/cool-japan/tenrso"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.29"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
indexmap = "2.12.1"
smallvec = "1.15.1"
arrow = { version = "57.1.0", default-features = false, features = ["ipc"] }
parquet = "57.1.0"
memmap2 = "0.9.9"
lz4 = "1.28.1"
zstd = "0.13.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9"
rayon = "1.11"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.31.0"
prometheus = "0.14.0"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
parking_lot = "0.12.5"
lazy_static = "1.5.0"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = "0.6.1"
mimalloc = { version = "0.1.48", default-features = false }
num_cpus = "1.17.0"
crossbeam = "0.8.4"
dashmap = "6.1.0"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-build = "0.14.2"
prost = "0.14.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.0"
futures = "0.3.31"
crc32fast = "1.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
blake3 = "1.8.2"

# SciRS2 ecosystem (MANDATORY - see SCIRS2_INTEGRATION_POLICY.md)
scirs2-core = { version = "0.1.0-rc.2", features = ["array", "random", "parallel"] }
scirs2-linalg = { version = "0.1.0-rc.2" }
scirs2-fft = { version = "0.1.0-rc.2" }

# TenRSo internal crates
tenrso = { version = "0.1.0-alpha.2", path = "crates/tenrso" }
tenrso-core = { version = "0.1.0-alpha.2", path = "crates/tenrso-core" }
tenrso-kernels = { version = "0.1.0-alpha.2", path = "crates/tenrso-kernels" }
tenrso-decomp = { version = "0.1.0-alpha.2", path = "crates/tenrso-decomp" }
tenrso-sparse = { version = "0.1.0-alpha.2", path = "crates/tenrso-sparse" }
tenrso-planner = { version = "0.1.0-alpha.2", path = "crates/tenrso-planner" }
tenrso-ooc = { version = "0.1.0-alpha.2", path = "crates/tenrso-ooc" }
tenrso-exec = { version = "0.1.0-alpha.2", path = "crates/tenrso-exec" }
tenrso-ad = { version = "0.1.0-alpha.2", path = "crates/tenrso-ad" }
