[package]
name = "tenrso-decomp"
version = "0.1.0-alpha.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Tensor decompositions: CP-ALS, Tucker-HOOI, TT-SVD"

[dependencies]
tenrso-core.workspace = true
tenrso-kernels.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# SciRS2-core is MANDATORY (see SCIRS2_INTEGRATION_POLICY.md)
# NEVER use ndarray, num-traits directly - always through scirs2-core
scirs2-core.workspace = true
scirs2-linalg.workspace = true

[features]
default = ["parallel"]
parallel = ["tenrso-kernels/parallel"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "decompositions"
harness = false
