[package]
name = "tenrso-exec"
version = "0.1.0-alpha.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Unified execution API for TenRSo"

[dependencies]
tenrso-core.workspace = true
tenrso-kernels.workspace = true
tenrso-sparse.workspace = true
tenrso-decomp.workspace = true
tenrso-planner.workspace = true
tenrso-ooc = { workspace = true, optional = true }
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
# SciRS2 ecosystem (MANDATORY - see SCIRS2_INTEGRATION_POLICY.md)
scirs2-core.workspace = true
scirs2-linalg.workspace = true
# Type-safe byte conversions for memory pooling
bytemuck = "1.24"

[features]
default = ["ooc"]
ooc = ["dep:tenrso-ooc"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "executor_ops"
harness = false

[[bench]]
name = "memory_pool_benchmarks"
harness = false

[[bench]]
name = "pooled_ops_benchmarks"
harness = false
